testdata/baselines/reference/submodule/conformance/checkJsdocTypeTagOnObjectProperty2.errors.txt
0.js(5,3): error TS2322: Type 'number' is not assignable to type 'string'.
0.js(10,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(12,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(18,12): error TS8010: Type annotations can only be used in TypeScript files.
0.js(21,12): error TS8010: Type annotations can only be used in TypeScript files.


==== 0.js (5 errors) ====
    // @ts-check
    var lol;
    const obj = {
      /** @type {string|undefined} */
      bar: 42,
      ~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
      /** @type {function(number): number} */
      method1(n1) {
          return "42";
      },
      /** @type {function(number): number} */
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
      method2: (n1) => "lol",
      /** @type {function(number): number} */
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
      arrowFunc: (num="0") => num + 42,
      /** @type {string} */
      lol
    }
    lol = "string"
    /** @type {string} */
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var s = obj.method1(0);
    
    /** @type {string} */
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var s1 = obj.method2("0");